force-app/main/default/objects/Time_Entry__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To differentiate Billable vs Non-Billable hours. Required for accountant summary.</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>