force-app/main/default/objects/Time_Entry__c/fields/Project_Billable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Billable_Rate__c</fullName>
    <description>Stores the hourly billing rate defined at the project level for Time &amp; Materials billing when Rate Type is set to Project Rate.</description>
    <formula>Project__r.Project_Billable_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Enter the hourly billing rate for this project. This rate will be applied to all time entries when Rate Type is set to Project Rate under Time &amp; Materials billing.</inlineHelpText>
    <label>Project Billable Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>