force-app/main/default/objects/Time_Entry__c/fields/Work_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Date__c</fullName>
    <description>Specifies the exact date when the work was performed. Must fall within Timesheet week range.</description>
    <label>Work Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>