force-app/main/default/objects/Time_Entry__c/validationRules/Prevent_Billable_Hours_For_Non_Billable.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Billable_Hours_For_Non_Billable</fullName>
    <active>true</active>
    <description>It blocks the Billable Hours, not allowed for Non-Billable projects.</description>
    <errorConditionFormula>AND(
 Project__r.RecordType.DeveloperName = &quot;Non_Billable&quot;,
 NOT(ISBLANK(Hours__c))
)</errorConditionFormula>
    <errorMessage>Hours are not allowed for Non-Billable projects.</errorMessage>
</ValidationRule>