force-app/main/default/objects/Time_Entry__c/validationRules/Prevent_Hours_For_Fixed_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Hours_For_Fixed_Fee</fullName>
    <active>true</active>
    <description>Prevents users from entering billable hours when Project Billing Type is Fixed Fee.</description>
    <errorConditionFormula>AND(
 Project__r.RecordType.DeveloperName = &quot;Fixed_Fee&quot;,
 NOT(ISBLANK(Hours__c))
)</errorConditionFormula>
    <errorMessage>Billable Hours are not allowed for Fixed Fee projects.</errorMessage>
</ValidationRule>