force-app/main/default/objects/Time_Entry__c/validationRules/Work_Date_Range.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Date_Range</fullName>
    <active>true</active>
    <description>Work Date must be within Timesheet week start and end date</description>
    <errorConditionFormula>OR(
    Work_Date__c &lt; Timesheet__r.Week_Start_Date__c,
    Work_Date__c &gt; Timesheet__r.Week_End_Date__c
)</errorConditionFormula>
    <errorDisplayField>Work_Date__c</errorDisplayField>
    <errorMessage>Work Date must fall within the selected Timesheet week.</errorMessage>
</ValidationRule>