force-app/main/default/objects/Time_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Billable__c</columns>
    <columns>Hours__c</columns>
    <columns>Work_Date__c</columns>
    <columns>Project__c</columns>
    <columns>Task_Type__c</columns>
    <columns>Timesheet__c</columns>
    <columns>Resource__c</columns>
    <columns>Status__c</columns>
    <columns>Notes__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>